fix layouts and spacing

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,8 +1,11 @@
 /* CONTENT SECTION STYLING */
 .contentSection {
-    margin: 210px;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    margin: 210px auto;
+    padding: 0px 25%;
     row-gap: 80px;
 }
 
@@ -16,18 +19,13 @@
     object-fit: cover;
 }
 
-/* RECOMMENDED DEVICE SIZES FROM W3SCHOOLS (https://www.w3schools.com/css/css_rwd_mediaqueries.asp) */
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1800px) {
     .contentSection {
-        margin: 80px;
+        padding: 0px 10%;
     }
 }
 
 @media only screen and (max-width: 992px) {    
-    .contentSection {
-        margin: 40px;
-    }
-
     .caseStudySection {
         flex-direction: column;
         gap: 40px;
